[package]
name = "recluse"
version = "1.0.0"
authors = [
    "Malachi Austin <dotmal@zoho.com>",
    "Malko Jacques <malko.jacques@zoho.com>",
]
edition = "2018"

[features]
default = [
    "dim3",
    "stdweb",
]
use-wasm-bindgen = [
    "dim3",
    "wasm-bindgen",
]
dim3 = [  ]

[dependencies]
either     = "1.0"
num-traits = "0.2"
slotmap    = "0.3" # For impulse cache.
generational-arena = "0.2" # For default body/collide/constraint/force sets.
smallvec   = "0.6"
lazy_static = "1.0"
alga       = "0.9"
nalgebra   = { version = "0.18", features = [ "sparse" ] }
approx     = "0.3"
downcast-rs = "1.0"
bitflags   = "1.0"
ncollide3d = "0.20.1"
ncollide2d = "0.20.1"
gfx-hal = "0.3.0"

[target.wasm32-unknown-unknown.dependencies]
stdweb = {version = "0.4", optional = true}
wasm-bindgen = {version = "0.2.21", optional = true}

[target.wasm32-unknown-emscripten.dependencies]
stdweb = {version = "0.4", optional = true}
wasm-bindgen = {version = "0.2.21", optional = true}

[target.asmjs-unknown-emscripten.dependencies]
stdweb = {version = "0.4", optional = true}
wasm-bindgen = {version = "0.2.21", optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = "0.1"
