[package]
name = "test_bed"
version = "0.1.0"
authors = ["Malachi Austin <malachiaustin02@outlook.com>"]
edition = "2018"
description = "Testbed for the Recluse engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recluse = { path = "../engine", version = "1.0.0" }