[package]
name = "rcls_testbed"
version = "0.1.0"
authors = ["Malachi Austin <malachiaustin02@outlook.com>"]
workspace = ".."
edition = "2018"
description = "Testbed for the Recluse engine"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "gfx-backend-gl/glutin"]
wgl = ["gfx-backend-gl", "gfx-backend-gl/winit", "gfx-backend-gl/wgl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "testbed"
path = "src/main.rs"

[dependencies]
#recluse = { path = "../engine", version = "1.0.0" }
gfx-hal = "0.3.0"
gfx-backend-empty = "0.3.0"
gfx-backend-vulkan = { version = "0.3.0", features = ["winit", "x11" ], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.20.0-alpha3"
glsl-to-spirv = "0.1.4"

[dependencies.gfx-backend-gl]
version = "0.3"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.32"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window"
]

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.3"
features = ["winit"]
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.3.0"
features = [
    "winit"
]
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3.0"
features = [
    "winit"
]
optional = true